[gd_scene load_steps=10 format=3 uid="uid://cx6x7h8qse3m5"]

[ext_resource type="Script" path="res://src/objects/DialogueBalloon/dialogue_balloon.gd" id="1_hwukg"]
[ext_resource type="Texture2D" uid="uid://cr8ml3xqgisle" path="res://src/assets/images/dynamic_box-100x100.png" id="2_oelop"]
[ext_resource type="Texture2D" uid="uid://c538awoecdreu" path="res://src/objects/DialogueBalloon/arrow.png" id="3_0pk7m"]
[ext_resource type="Texture2D" uid="uid://c8vbhbh1i7xe1" path="res://src/assets/images/dialogue_balloon_pin_down.png" id="3_ijwt0"]

[sub_resource type="Animation" id="Animation_ku831"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:pivot_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, 5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fddko"]
_data = {
"default": SubResource("Animation_ku831")
}

[sub_resource type="Animation" id="Animation_ibddh"]
resource_name = "fadeIn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PinDown:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ugdk2"]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PinDown:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ijph8"]
_data = {
"fadeIn": SubResource("Animation_ibddh"),
"reset": SubResource("Animation_ugdk2")
}

[node name="DialogueBalloon" type="Node2D"]
script = ExtResource("1_hwukg")

[node name="Balloon" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = -202.0
offset_right = 629.0
offset_bottom = -40.0

[node name="Background" type="NinePatchRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oelop")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="TextContainer" type="VBoxContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 41.0
offset_top = 39.0
offset_right = -83.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/TextContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.792157)
theme_override_font_sizes/normal_font_size = 24
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" type="RichTextLabel" parent="Balloon/TextContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Dialogue"
fit_content = true
scroll_active = false

[node name="ArrowAnimationPlayer" type="AnimationPlayer" parent="Balloon"]
libraries = {
"": SubResource("AnimationLibrary_fddko")
}
autoplay = "default"
speed_scale = 2.0

[node name="Arrow" type="TextureRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -68.0
offset_right = -52.0
offset_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
texture = ExtResource("3_0pk7m")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ijph8")
}
autoplay = "reset"

[node name="PinDown" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_top = -46.0
offset_right = 40.0
texture = ExtResource("3_ijwt0")

[node name="SmallText" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 2.08165e-12)
offset_left = 191.0
offset_top = 82.0
offset_right = 691.0
offset_bottom = 156.0
theme_override_font_sizes/normal_font_size = 16
text = "Small Size"
scroll_active = false

[node name="MediumText" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 2.08165e-12)
offset_left = 2.0
offset_top = 80.0
offset_right = 183.0
offset_bottom = 154.0
theme_override_font_sizes/normal_font_size = 24
text = "Medium Size"
scroll_active = false
